# BankProject2024

./: .editorconfig  .gitignore  BankFinalPresentation.pptx  CMakeLists.txt  FinalBankProjectReport.docx  FinalProjectOOD2024.sln
FinalProjectOOD2024/: FinalProjectOOD2024.sln
FinalProjectOOD2024/FinalProjectOOD2024/: Account.cpp  Account.h  BankLogic.cpp  BankLogic.h  BankStorage.cpp  BankStorage.h  FileDemo.cpp  FinalProjectOOD2024.vcxproj  FinalProjectOOD2024.vcxproj.filters  FirstFile.cpp  Main.cpp  Manager.cpp  Manager.h  Transaction.cpp  Transaction.h  User.cpp  User.h
doc/: Class UML.vsdx  FinalBankProjectReport.docx  Static Class UML.odg
